--- a/Chart.yaml
+++ b/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: argocd-exemple
+name: inception-of-things-app
 description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
