--- a/values.yaml
+++ b/values.yaml
@@ -5,10 +5,10 @@
 replicaCount: 1
 
 image:
-  repository: nginx
+  repository: wil42/playground
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: ""
+  tag: "v2"
 
 imagePullSecrets: []
 nameOverride: ""
@@ -38,23 +38,18 @@ securityContext: {}
 
 service:
   type: ClusterIP
-  port: 80
+  port: 8888
 
 ingress:
   enabled: false
-  className: ""
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
+  className: "nginx"
+  annotations:
+    ingress.kubernetes.io/ssl-redirect: "false"
   hosts:
-    - host: chart-example.local
+    - host: app.inception-of-things.local
       paths:
         - path: /
           pathType: ImplementationSpecific
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
